<resources>
    <string name="app_name">Impostor</string>
    <string name="button_addCategory">Add Category</string>
    <string name="button_addPlayer">Add Player</string>
    <string name="button_addWord">Add Word</string>
    <string name="button_finish">Finish Game</string>
    <string name="button_nextPlayer">Next Player</string>
    <string name="button_startGame">Start Game</string>
    <string name="button_submit">Submit</string>
    <string name="imageDesc_categoryDelete">Delete Category</string>
    <string name="imageDesc_categoryDeleteCancel">Cancel Delete</string>
    <string name="imageDesc_categoryDeleteConfirm">Confirm Delete</string>
    <string name="imageDesc_categoryEdit">Edit Category Name</string>
    <string name="imageDesc_categoryEnable">Enable Category</string>
    <string name="imageDesc_playerEdit">Edit Player Name</string>
    <string name="imageDesc_playerDelete">Delete Player</string>
    <string name="imageDesc_playerDown">Move Player Name Down</string>
    <string name="imageDesc_playerUp">Move Player Name Up</string>
    <string name="imageDesc_restoreDefaults">Restore Default Categories</string>
    <string name="imageDesc_revealIcon">Reveal icon</string>
    <string name="imageDesc_wordDelete">Delete word</string>
    <string name="imageDesc_wordEdit">Edit Word</string>
    <string name="inputHint_category">Enter Category Title</string>
    <string name="inputHint_name">Enter name</string>
    <string name="inputHint_word">Enter Word</string>
    <string name="subheading_category">Categories:</string>
    <string name="subheading_player">Players:</string>
    <string name="subheading_revealImposter">Imposter:</string>
    <string name="subheading_revealWord">Secret Word:</string>
    <string name="text_categoryHintPrefix">"Category"</string>
    <string name="text_deleteConfirmation">Confirm Delete?</string>
    <string name="text_discussion">Discussion Time</string>
    <string name="text_discussionPlayer">will start the discussion.</string>
    <string name="text_revealHint">Hold to reveal</string>
    <string name="text_imposterInfo">You are the imposter</string>
    <string name="text_reveal">Reveal Imposter and Secret Word</string>
</resources>