<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/subheading_player"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nameRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/addNameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/addNameInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:autofillHints="name"
                    android:ems="25"
                    android:hint="@string/inputHint_name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/addNameSubmitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_submit" />
            </LinearLayout>

            <Button
                android:id="@+id/addPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_addPlayer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:text="@string/subheading_category"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/addCategoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_addCategory" />

            <Button
                android:id="@+id/startGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_startGame" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>