<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/nameDisplayRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameItemView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="?android:attr/selectableItemBackground"
            android:padding="12dp"
            android:textSize="20sp"
            tools:text="Dummy Name" />

        <ImageButton
            android:id="@+id/nameEditButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageDesc_playerEdit"
            android:padding="8dp"
            android:src="@drawable/icon_person_edit_24px" />

        <ImageButton
            android:id="@+id/nameUpButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageDesc_playerUp"
            android:padding="8dp"
            android:src="@drawable/icon_text_select_move_up_24px" />

        <ImageButton
            android:id="@+id/nameDownButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageDesc_playerDown"
            android:padding="8dp"
            android:src="@drawable/icon_text_select_move_down_24px" />

        <ImageButton
            android:id="@+id/nameDeleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageDesc_playerDelete"
            android:padding="8dp"
            android:src="@drawable/icon_delete_24px" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameEditRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/nameEditInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:autofillHints="name"
            android:ems="25"
            android:hint="@string/inputHint_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nameEditSubmitButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/button_submit" />

    </LinearLayout>

</LinearLayout>