<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/wordDisplayRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wordView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5"
            android:background="?android:attr/selectableItemBackground"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="Dummy Word" />

        <ImageButton
            android:id="@+id/wordEditButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageDesc_wordEdit"
            android:padding="8dp"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:id="@+id/wordDeleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imageDesc_wordDelete"
            android:padding="8dp"
            android:src="@android:drawable/ic_menu_delete" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wordEditRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/wordEditInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.5"
            android:ems="25"
            android:hint="@string/inputHint_word"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/wordEditSubmitButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/button_submit" />
    </LinearLayout>

</LinearLayout>