<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categoryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Category Title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wordRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/addWordRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/addWordInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:ems="25"
                    android:hint="@string/inputHint_word"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <Button
                    android:id="@+id/addWordSubmitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_submit" />
            </LinearLayout>

            <Button
                android:id="@+id/addWordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_addWord" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>